# Movie-Recomendation

./: 01_simple_RNN.ipynb  02_prediction.ipynb  README.md  pyproject.toml
